--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   camera: ^0.10.5+5
+  path_provider: ^2.1.1
+  dio: ^5.3.3
 
 dev_dependencies:
   flutter_test:
