--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path_provider: ^2.1.1
   dio: ^5.3.3
   image_picker: ^1.0.4
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
